[project]
name = "semiconductor-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "defusedxml>=0.7.1",
]

[project.scripts]
semiconductor-mcp = "semiconductor_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semiconductor_mcp"]
